fix 1px horizontal overflow causing scrollbar

--- a/static/site.css
+++ b/static/site.css
@@ -4,6 +4,7 @@ html {
 }
 body {
     font-size: 20px;
+    overflow-x: hidden;
 }
 
 @media (max-width: 767px) {
